--- a/flexbox_example.html
+++ b/flexbox_example.html
@@ -5,19 +5,19 @@
 .flex-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  align-content: flex-start;
-  height: 300px; /* Ajusta la altura según sea necesario */
-  border: 1px solid black; /* Agrega un borde para visualizar el contenedor */
+  flex-wrap: ;
+  justify-content: ;
+  align-items: ;
+  align-content: ;
+  height: 300px;
+  border: 1px solid black;
 }
 
 .flex-item {
-  width: 100px; /* Ancho de los elementos flexibles */
-  height: 100px; /* Altura de los elementos flexibles */
-  margin: 10px; /* Márgenes entre los elementos flexibles */
-  background-color: lightgray; /* Color de fondo de los elementos */
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+  background-color: lightgray;
 }
 
 .centered-box {
@@ -27,6 +27,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  /* Add any additional styles here if needed */
 }
 </style>
 </head>
