Menu css con bash para ver diferentes ejejmplos,añadiendo variables me da fallito

--- a/flexbox_example.html
+++ b/flexbox_example.html
@@ -5,19 +5,19 @@
 .flex-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: ;
-  justify-content: ;
-  align-items: ;
-  align-content: ;
-  height: 300px;
-  border: 1px solid black;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  align-content: flex-start;
+  height: 300px; /* Ajusta la altura según sea necesario */
+  border: 1px solid black; /* Agrega un borde para visualizar el contenedor */
 }
 
 .flex-item {
-  width: 100px;
-  height: 100px;
-  margin: 10px;
-  background-color: lightgray;
+  width: 100px; /* Ancho dinámico de los elementos flexibles */
+  height: 100px; /* Altura dinámica de los elementos flexibles */
+  margin: 10px; /* Márgenes dinámicos entre los elementos flexibles */
+  background-color: lightgray; /* Color de fondo dinámico de los elementos */
 }
 
 .centered-box {
@@ -27,7 +27,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* Add any additional styles here if needed */
 }
 </style>
 </head>
