--- a/centered_flexbox.html
+++ b/centered_flexbox.html
@@ -14,6 +14,9 @@
   width: 100px;
   height: 100px;
   background-color: lightblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 </style>
 </head>
